[package]
name = "fel-cli"
version = "0.2.0"
authors = ["Razican <razican@protonmail.ch>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Razican/aw-fel-rs"
description = """
CLI tools for dealing with Allwinner devices in FEL mode, in pure Rust.
"""
keywords = ["arm", "sunxi", "allwinner", "fel"]
categories = ["embedded", "command-line-utilities"]

[dependencies]
error-chain = "0.9"
aw-fel = "0.3"
clap = "2.20"
ansi_term = "0.9"
