[package]
name = "fel-cli"
version = "0.5.0"
authors = ["Razican <razican@protonmail.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Razican/fel-cli"
description = """
CLI tools for dealing with Allwinner devices in FEL mode, in pure Rust.
"""
keywords = ["arm", "sunxi", "allwinner", "fel"]
categories = ["embedded", "command-line-utilities"]

[badges]
travis-ci = { repository = "Razican/fel-cli", branch = "master" }
codecov = { repository = "Razican/fel-cli", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Razican/fel-cli" }
is-it-maintained-open-issues = { repository = "Razican/fel-cli" }
maintenance = { status = "passively-maintained" }

[dependencies]
failure = "0.1.3"
aw-fel = "0.5.2"
clap = "2.32.0"
ansi_term = "0.11.0"
